--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 
     <table>
         <tr>
-            <td><a href="http://192.168.0.166/aboutme.html">About Me</a></td>
-            <td><a href="http://192.168.0.166/aboutproject">My Projects</a></td>
-            <td><a href="http://192.168.0.166/contact">Contact Me</a></td>
+            <td><a href="https://yaroslapenskoe.github.io/AdvaScriptCColdsite/aboutme.html">About Me</a></td>
+            <td><a href="https://yaroslapenskoe.github.io/AdvaScriptCColdsite/aboutproject">My Projects</a></td>
+            <td><a href="https://yaroslapenskoe.github.io/AdvaScriptCColdsite/contact">Contact Me</a></td>
         </tr>
     </table>
 
@@ -57,9 +57,9 @@
     <h2>My Projects</h2>
     <p>Here are some of my favorite projects:</p>
     <ul>
-        <li><a href="http://192.168.0.166/none.html">Project 1</a></li>
-        <li><a href="http://192.168.0.166/none.html">Project 2</a></li>
-        <li><a href="http://192.168.0.166/none.html">Project 3</a></li>
+        <li><a href="https://yaroslapenskoe.github.io/AdvaScriptCColdsite/none.html">Project 1</a></li>
+        <li><a href="https://yaroslapenskoe.github.io/AdvaScriptCColdsite/none.html">Project 2</a></li>
+        <li><a href="https://yaroslapenskoe.github.io/AdvaScriptCColdsite//none.html">Project 3</a></li>
     </ul>
 
     <h2>Contact Me</h2>
