--- a/none.html
+++ b/none.html
@@ -41,7 +41,7 @@
     <p>It might have been removed, or the URL might be incorrect.</p>
 
     <h2>What can you do?</h2>
-    <p>Try going back to the <a href="index.html">homepage</a> or check out some of our other pages!</p>
+    <p>Try going back to the <a href="https://yaroslapenskoe.github.io/AdvaScriptCColdsite/index.html">homepage</a> or check out some of our other pages!</p>
 
     <img src="mie.gif" alt="Funny GIF" width="150" />
 
