--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <h1>Welcome to My Awesome 2000s Website!</h1>
     
-    <marquee behavior="scroll" direction="left">Check out my cool website! It's totally rad!</marquee>
+    <marquee behavior="scroll" direction="left">The source code of the site is here:https://github.com/YaroslaPenskoe/AdvaScriptCColdsite/tree/main</marquee>
 
     <table>
         <tr>
