--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <h2>My Projects</h2>
     <p>Here are some of my favorite projects:</p>
     <ul>
-        <li><a href="https://yaroslapenskoe.github.io/AdvaScriptCColdsite/none.html">Project 1</a></li>
+        <li><a href="https://yaroslapenskoe.github.io/AdvaScriptCColdsite/none.html">ASOD ThinkPad review</a></li>
         <li><a href="https://yaroslapenskoe.github.io/AdvaScriptCColdsite/none.html">Project 2</a></li>
         <li><a href="https://yaroslapenskoe.github.io/AdvaScriptCColdsite//none.html">Project 3</a></li>
     </ul>
