--- a/asodtr.html
+++ b/asodtr.html
@@ -54,7 +54,7 @@
     <p>We appreciate your patience. In the meantime, feel free to <a href="contact.html">contact us</a> if you have any questions!</p>
 
     <footer>
-        <p>&copy; 2000 My Awesome Website</p>
+        <p>&copy; 2025 AdvaScriptCC®, all right recived</p>
     </footer>
 
 </body>
