--- a/asodtr.html
+++ b/asodtr.html
@@ -3,59 +3,178 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Under Construction - My Awesome 2000s Website</title>
+    <title>IBM ThinkPad Reviews (2000-2005)</title>
     <style>
         body {
-            background-color: #FFCC00; /* Bright yellow background */
-            font-family: 'Comic Sans MS', cursive, sans-serif; /* Comic Sans font */
-            color: #FF0000; /* Red text */
+            background-color: #F0F0F0; /* Light gray background */
+            font-family: 'Arial', sans-serif; /* Clean font */
+            color: #333; /* Dark text */
             text-align: center;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background-color: #003366; /* Dark blue header */
+            color: #FFFFFF; /* White text */
+            padding: 20px;
         }
         h1 {
             font-size: 48px;
-            text-decoration: underline;
+            margin: 0;
         }
-        h2 {
-            font-size: 36px;
-            color: #0000FF; /* Blue text for subheadings */
+        nav {
+            margin: 20px 0;
         }
-        p {
-            font-size: 24px; /* Standard paragraph font size */
-            margin: 10px 0; /* Margin for spacing */
-        }
-        img {
-            margin-top: 20px;
-            width: 300px; /* Set a fixed width for images */
-        }
-        a {
-            color: #00FF00; /* Green links */
+        nav a {
+            color: #FFFFFF; /* White links */
             text-decoration: none; /* No underline */
+            margin: 0 15px;
+            font-size: 20px;
         }
-        a:hover {
+        nav a:hover {
             text-decoration: underline; /* Underline on hover */
         }
-        footer {
+        .container {
+            width: 80%;
+            margin: 0 auto;
+            background-color: #FFFFFF; /* White background for content */
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        h2 {
+            color: #003366; /* Dark blue for subheadings */
+            font-size: 36px;
             margin-top: 20px;
+        }
+        .review {
+            border: 1px solid #003366; /* Dark blue border */
+            border-radius: 5px;
+            padding: 15px;
+            margin: 15px 0;
+            background-color: #E6E6E6; /* Light gray for reviews */
+        }
+        .pros, .cons {
+            text-align: left;
+            margin: 10px 0;
+        }
+        footer {
+            background-color: #003366; /* Dark blue footer */
+            color: #FFFFFF; /* White text */
+            padding: 10px;
+            position: relative;
+            bottom: 0;
+            width: 100%;
         }
     </style>
 </head>
 <body>
 
-    <h1>Under Construction</h1>
+<header>
+    <h1>IBM ThinkPad Reviews (2000-2005)</h1>
+    <nav>
+        <a href="#t40">T40</a>
+        <a href="#t41">T41</a>
+        <a href="#t42">T42</a>
+        <a href="#t43">T43</a>
+    </nav>
+</header>
 
-    <h2>We're Working Hard!</h2>
-    
-    <p>Our website is currently under construction.</p>
-    <p>We are making some exciting updates and improvements!</p>
+<div class="container">
 
-    <img src="https://media.giphy.com/media/3o7aD2sa1g1g1g1g1G/giphy.gif" alt="Under Construction GIF" />
+    <h2 id="t40">IBM ThinkPad T40</h2>
+    <div class="review">
+        <h3>Overview</h3>
+        <p>The T40 was known for its robust build quality and excellent keyboard. It was a favorite among business professionals.</p>
+        <div class="pros">
+            <strong>Pros:</strong>
+            <ul>
+                <li>Durable design</li>
+                <li>Excellent keyboard feel</li>
+                <li>Good battery life</li>
+                <li>Lightweight for its class</li>
+            </ul>
+        </div>
+        <div class="cons">
+            <strong>Cons:</strong>
+            <ul>
+                <li>Limited graphics performance</li>
+                <li>Average display quality</li>
+            </ul>
+        </div>
+    </div>
 
-    <h2>Check Back Soon!</h2>
-    <p>We appreciate your patience. In the meantime, feel free to <a href="contact.html">contact us</a> if you have any questions!</p>
+    <h2 id="t41">IBM ThinkPad T41</h2>
+    <div class="review">
+        <h3>Overview</h3>
+        <p>The T41 improved upon the T40 with better graphics options and a more powerful processor.</p>
+        <div class="pros">
+            <strong>Pros:</strong>
+            <ul>
+                <li>Improved graphics performance</li>
+                <li>Solid build quality</li>
+                <li>Good battery life</li>
+                <li>Comfortable keyboard</li>
+            </ul>
+        </div>
+        <div class="cons">
+            <strong>Cons:</strong>
+            <ul>
+                <li>Heavier than the T40</li>
+                <li>Pricey compared to competitors</li>
+            </ul>
+        </div>
+    </div>
 
-    <footer>
-        <p>&copy; 2025 AdvaScriptCC®, all right recived</p>
-    </footer>
+    <h2 id="t42">IBM ThinkPad T42</h2>
+    <div class="review">
+        <h3>Overview</h3>
+        <p>The T42 was a refinement of the T41, offering better performance and enhanced features.</p>
+        <div class="pros">
+            <strong>Pros:</strong>
+            <ul>
+                <li>Excellent performance</li>
+                <li>Great battery life</li>
+                <li>High-quality display</li>
+                <li>Robust security features</li>
+            </ul>
+        </div>
+        <div class="cons">
+            <strong>Cons:</strong>
+            <ul>
+                <li>Can run hot under load</li>
+                <li>Limited upgrade options</li>
+            </ul>
+        </div>
+    </div>
+
+    <h2 id="t43">IBM ThinkPad T43</h2>
+    <div class="review">
+        <h3>Overview</h3>
+        <p>The T43 was one of the last models in the T series before Lenovo took over, known for its reliability and performance.</p>
+        <div class="pros">
+            <strong>Pros:</strong>
+            <ul>
+                <li>Strong performance</li>
+                <li>Excellent keyboard</li>
+                <li>Good battery life</li>
+                <li>Durable chassis</li>
+            </ul>
+        </div>
+        <div class="cons">
+            <strong>Cons:</strong>
+            <ul>
+                <li>Heavier than some competitors</li>
+                <li>Graphics performance could be better</li>
+            </ul>
+        </div>
+    </div>
+
+</div>
+
+<footer>
+    <p>&copy; 2005 IBM ThinkPad Reviews. All rights reserved.</p>
+</footer>
 
 </body>
 </html>
