--- a/asodtr.html
+++ b/asodtr.html
@@ -173,7 +173,7 @@
 </div>
 
 <footer>
-    <p>&copy; 2005 IBM ThinkPad Reviews. All rights reserved.</p>
+    <p>&copy;2025 AdvaScriptCC®. All right recived.</p>
 </footer>
 
 </body>
