--- a/asodtr.html
+++ b/asodtr.html
@@ -103,7 +103,7 @@
 
     <h2 id="t40">IBM ThinkPad T40</h2>
     <div class="review">
-        <img src="images/t40.jpg" alt="IBM ThinkPad T40" />
+        <img src="t40.jpg" alt="IBM ThinkPad T40" />
         <h3>Overview</h3>
         <p>The T40 was known for its robust build quality and excellent keyboard. It was a favorite among business professionals.</p>
         <div class="pros">
@@ -126,7 +126,7 @@
 
     <h2 id="t41">IBM ThinkPad T41</h2>
     <div class="review">
-        <img src="images/t41.jpg" alt="IBM ThinkPad T41" />
+        <img src="t41.jpg" alt="IBM ThinkPad T41" />
         <h3>Overview</h3>
         <p>The T41 improved upon the T40 with better graphics options and a more powerful processor.</p>
         <div class="pros">
@@ -148,7 +148,7 @@
 
     <h2 id="t42">IBM ThinkPad T42</h2>
     <div class="review">
-        <img src="images/t42.jpg" alt="IBM ThinkPad T42" />
+        <img src="t42.jpg" alt="IBM ThinkPad T42" />
         <h3>Overview</h3>
         <p>The T42 was praised for its excellent display and overall reliability, making it a popular choice.</p>
         <div class="pros">
@@ -169,7 +169,7 @@
 
     <h2 id="t43">IBM ThinkPad T43</h2>
     <div class="review">
-        <img src="images/t43.jpg" alt="IBM ThinkPad T43" />
+        <img src="t43.jpg" alt="IBM ThinkPad T43" />
         <h3>Overview</h3>
         <p>The T43 offered fast performance and excellent customer support, making it a solid investment.</p>
         <div class="pros">
