--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,7 @@
         <input type="submit" value="Send Message">
     </form>
 
-    <p>If you prefer, you can also reach me at: <a href="mailto:example@example.com">example@example.com</a></p>
+    <p>If you prefer, you can also reach me at: <a href="mailto:advascriptcc@outlook.com">advascriptcc@outlook.com</a></p>
 
     <footer>
         <p>&copy; 2025 AdvaScriptCC®, all right recived </p>
