--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
     <h2>Contact Me</h2>
     <p>Email me at: <a href="mailto:advascriptcc@outlook.com">advascriptcc@outlook.com</a></p>
 
+    </h2>Source code</h2>
+    <p>Hey there source code of this site <a href="https://github.com/YaroslaPenskoe/AdvaScriptCColdsite/tree/main"> click me/p>
+
     <img src="mie.gif" alt="Cool GIF" width="150" />
 
     <footer>
