--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
     <h2>Contact Me</h2>
     <p>Email me at: <a href="mailto:advascriptcc@outlook.com">advascriptcc@outlook.com</a></p>
-    <p>Hey there source code of this site <a href="https://github.com/YaroslaPenskoe/AdvaScriptCColdsite/tree/main"> click me</a></p>
+    <p>Hey there source code of this site <a href="https://github.com/YaroslaPenskoe/AdvaScriptCColdsite/tree/main"> click me</a>
 
     <img src="mie.gif" alt="Cool GIF" width="150" />
 
