--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
             <td><a href="https://yaroslapenskoe.github.io/AdvaScriptCColdsite/aboutme.html">About Me</a></td>
             <td><a href="https://yaroslapenskoe.github.io/AdvaScriptCColdsite/aboutproject">My Projects</a></td>
             <td><a href="https://yaroslapenskoe.github.io/AdvaScriptCColdsite/contact">Contact Me</a></td>
+            <td><a href="https://yaroslapenskoe.github.io/AdvaScriptCColdsite/btt.html">How to back to 2000s</a></td>
         </tr>
     </table>
 
