--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
 
     <table>
         <tr>
-            <td><a href="https://yaroslapenskoe.github.io/AdvaScriptCColdsite/aboutme.html">About Me</a></td>
-            <td><a href="https://yaroslapenskoe.github.io/AdvaScriptCColdsite/aboutproject">My Projects</a></td>
-            <td><a href="https://yaroslapenskoe.github.io/AdvaScriptCColdsite/contact">Contact Me</a></td>
-            <td><a href="https://yaroslapenskoe.github.io/AdvaScriptCColdsite/btt.html">How to back to 2000s</a></td>
+            <td><a href="aboutme.html">About Me</a></td>
+            <td><a href="aboutproject">My Projects</a></td>
+            <td><a href="contactюреьд">Contact Me</a></td>
+            <td><a href="btt.html">How to back to 2000s</a></td>
         </tr>
     </table>
 
@@ -58,9 +58,9 @@
     <h2>My Projects</h2>
     <p>Here are some of my favorite projects:</p>
     <ul>
-        <li><a href="https://yaroslapenskoe.github.io/AdvaScriptCColdsite/asodtr.html">ASOD ThinkPad review</a></li>
-        <li><a href="https://yaroslapenskoe.github.io/AdvaScriptCColdsite/none.html">Project 2</a></li>
-        <li><a href="https://yaroslapenskoe.github.io/AdvaScriptCColdsite//none.html">Project 3</a></li>
+        <li><a href="asodtr.html">ASOD ThinkPad review</a></li>
+        <li><a href="gallery-menu.html">Галлерея старой техники</a></li>
+        <li><a href="none.html">Project 3</a></li>
     </ul>
 
     <h2>Contact Me</h2>
