--- a/none.html
+++ b/none.html
@@ -38,10 +38,10 @@
     <marquee behavior="scroll" direction="left">Oops! Looks like you took a wrong turn!</marquee>
 
     <p>We're sorry, but the page you are looking for does not exist.</p>
-    <p>It might have been removed, or the URL might be incorrect.</p>
+    <p>It might have been removed, or the URL might be incorrect. Or page under construction</p>
 
     <h2>What can you do?</h2>
-    <p>Try going back to the <a href="https://yaroslapenskoe.github.io/AdvaScriptCColdsite/index.html">homepage</a> or check out some of our other pages!</p>
+    <p>Try going back to the <a href="index.html">homepage</a> or check out some of our other pages! Or wait for updates!</p>
 
     <img src="mie.gif" alt="Funny GIF" width="150" />
 
