--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+t<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -52,6 +52,8 @@
         </tr>
     </table>
 
+    <img src="va.jpg" alt="Viktor-Antonov" width="500" />
+    
     <h2>About Me</h2>
     <p>Hi! I'm a web enthusiast from the year 2000. I love creating websites with bright colors and fun animations!</p>
     
