--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ t<!DOCTYPE html>
         </tr>
     </table>
 
-    <img src="va.jpg" alt="Viktor-Antonov" width="500" />
+
     
     <h2>About Me</h2>
     <p>Hi! I'm a web enthusiast from the year 2000. I love creating websites with bright colors and fun animations!</p>
@@ -68,6 +68,9 @@ t<!DOCTYPE html>
     <h2>Contact Me</h2>
     <p>Email me at: <a href="mailto:advascriptcc@outlook.com">advascriptcc@outlook.com</a></p>
     <p>Hey there source code of this site <a href="https://github.com/YaroslaPenskoe/AdvaScriptCColdsite/tree/main"> click me</a>
+
+    <p><Press F to pay respect to Viktor Antonov</p>
+    <img src="va.jpg" alt="Viktor-Antonov" width="500" />
 
     <img src="mie.gif" alt="Cool GIF" width="150" />
 
