--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@ t<!DOCTYPE html>
             <td><a href="aboutproject">My Projects</a></td>
             <td><a href="contactюреьд">Contact Me</a></td>
             <td><a href="btt.html">How to back to 2000s</a></td>
+            <td><a href="pf.html" Press F</a></td>
         </tr>
     </table>
 
@@ -68,9 +69,6 @@ t<!DOCTYPE html>
     <h2>Contact Me</h2>
     <p>Email me at: <a href="mailto:advascriptcc@outlook.com">advascriptcc@outlook.com</a></p>
     <p>Hey there source code of this site <a href="https://github.com/YaroslaPenskoe/AdvaScriptCColdsite/tree/main"> click me</a>
-
-    <p><Press F to pay respect to Viktor Antonov</p>
-    <img src="va.jpg" alt="Viktor-Antonov" width="500" />
 
     <img src="mie.gif" alt="Cool GIF" width="150" />
 
