--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ t<!DOCTYPE html>
             <td><a href="aboutproject">My Projects</a></td>
             <td><a href="contactюреьд">Contact Me</a></td>
             <td><a href="btt.html">How to back to 2000s</a></td>
-            <td><a href="pf.html" Press F</a></td>
+            <td><a href="pf.html"> Press F</a></td>
         </tr>
     </table>
 
