--- a/pf.html
+++ b/pf.html
@@ -41,9 +41,7 @@ t<!DOCTYPE html>
 
     <h1>Спи спокойно Виктор Антонов🌹</h1>
     
-    <marquee behavior="scroll" direction="left">The source code of the site is here:https://github.com/YaroslaPenskoe/AdvaScriptCColdsite/tree/main</marquee>
-
-    <p>Спи спойно Виктор Антонов спасибо тебе за Half-Life 2, Dishonored 1 и 2, Fallout 4 и Doom (2016) </p>
+    <p>Спи спокойно Виктор Антонов спасибо тебе за Half-Life 2, Dishonored 1 и 2, Fallout 4 и Doom (2016) </p>
     <img src ="va.jpg" alt="Viktor-Antonov" width="550" />
 
 
