--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ t<!DOCTYPE html>
     <title>Welcome to My 2000s Style Website!</title>
     <style>
         body {
-            background-color: #00FF00; /* Bright green background */
+            background-color: #6B8E23; /* Bright green background */
             font-family: 'Comic Sans MS', cursive, sans-serif; /* Comic Sans font */
             color: #0000FF; /* Blue text */
             text-align: center;
