--- a/btt.html
+++ b/btt.html
@@ -63,7 +63,7 @@
 
         <p>!Внимание! Фото примеров и инстуркция взята в сайта theoldnet.org инстуркция была переведена и упращена автор этого сайта никак не относится к theoldnet.org!</p>
 
-        <button class="button" onclick="window.location.href='bttie.html">Инструкция для Internet explorer</button>
+        <button onclick="window.location.href='bttie.html'">Версия для Internet Explorer </button>
 
     
         <img src="mie.gif" width="150" alt="Cool GIF">
