--- a/bttie.html
+++ b/bttie.html
@@ -66,7 +66,7 @@
 
         <p>!Внимание! Фото примеров и инстуркция взята в сайта theoldnet.org инстуркция была переведена и упращена автор этого сайта никак не относится к theoldnet.org!</p>
 
-        <button class="button" onclick="window.location.href='btt.html">Инструкция для RetroZilla и Mozila Firefox</button>
+        <button onclick="window.location.href='btt.html'">Версия для RetroZilla и Mozila Firefox </button>
         <img src="mie.gif" width="150" alt="Cool GIF">
     <p>&copy; 2025 AdvaScriptCC®, all right recived</p>
     </body>
