--- a/bttie.html
+++ b/bttie.html
@@ -67,7 +67,10 @@
         <p>!Внимание! Фото примеров и инстуркция взята в сайта theoldnet.org инстуркция была переведена и упращена автор этого сайта никак не относится к theoldnet.org!</p>
 
         <button onclick="window.location.href='btt.html'">Версия для RetroZilla и Mozila Firefox </button>
+    <a href="index.html">
         <img src="mie.gif" width="150" alt="Cool GIF">
+    </a>
+    
     <p>&copy; 2025 AdvaScriptCC®, all right recived</p>
     </body>
 </html>
