--- a/btt.html
+++ b/btt.html
@@ -66,7 +66,9 @@
         <button onclick="window.location.href='bttie.html'">Версия для Internet Explorer </button>
 
     
+    <a href="index.html">
         <img src="mie.gif" width="150" alt="Cool GIF">
+    </a>
         <p>&copy; 2025 AdvaScriptCC®, all right recived</p>
     </body>
 </html>
