--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to My 2000s Style Website!</title>
+    <img src="asos.png" alt="banner" width="680" />
     <style>
         body {
             background-color: #87CEEB; /* Bright green background */
