--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <img src="asos.png" alt="banner" width="680" />
+    <img src="asos.png" alt="banner" width="1000" />
     <style>
         body {
             background-color: #87CEEB; /* Bright green background */
@@ -42,7 +42,7 @@
 </head>
 <body>
 
-    <h1>Welcome to My Awesome 2000s Website!</h1>
+    <h1>Welcome to My Awesome 2000s Website! Version Alpha 2.0</h1>
     
     <marquee behavior="scroll" direction="left">The source code of the site is here: https://github.com/YaroslaPenskoe/AdvaScriptCColdsite/tree/main</marquee>
 
