--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <img src="asos.png" alt="banner" width="1000" />
+    <img src="asos.png" alt="banner" class="responsive-img" />
     <style>
         body {
             background-color: #87CEEB; /* Bright green background */
@@ -37,6 +37,10 @@
         }
         .image-container {
             margin-top: 20px;
+        }
+        .responsive-img {
+            max-width: 100%;
+            height: auto;
         }
     </style>
 </head>
