--- a/pf.html
+++ b/pf.html
@@ -3,6 +3,7 @@ t<!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <title>Welcome to My 2000s Style Website!</title>
     <style>
         body {
