--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <tr>
             <td><a href="aboutme.html">About Me</a></td>
             <td><a href="aboutproject">My Projects</a></td>
-            <td><a href="contactюреьд">Contact Me</a></td>
+            <td><a href="contact.html">Contact Me</a></td>
             <td><a href="btt.html">How to back to 2000s</a></td>
             <td><a href="pf.html"> Press F</a></td>
         </tr>
