--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <img src="asos.png" alt="banner" class="responsive-img" />
+    <title>AdvaScriptCC Old site alpha 2.0</title>
     <style>
         body {
             background-color: #87CEEB; /* Bright green background */
