--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <title>AdvaScriptCC Old site alpha 2.0</title>
     <style>
         body {
-            background-color: #87CEEB; /* Bright green background */
-            font-family: 'Comic Sans MS', cursive, sans-serif; /* Comic Sans font */
-            color: #0000FF; /* Blue text */
+            background-color: #87CEEB;
+            font-family: Arial, sans-serif;
+            color: #0000FF;
             text-align: center;
         }
         h1 {
