--- a/aboutme.html
+++ b/aboutme.html
@@ -8,7 +8,7 @@
     <style>
         body {
             background-color: #FFCC00; /* Bright yellow background */
-            font-family: 'Comic Sans MS', cursive, sans-serif; /* Comic Sans font */
+            font-family: Arial, sans-serif;
             color: #0000FF; /* Blue text */
             text-align: center;
         }
