--- a/contact.html
+++ b/contact.html
@@ -7,10 +7,12 @@
     <title>Contact Me - My Awesome 2000s Website</title>
     <style>
         body {
-            background-color: #FFFFFF; /* White background */
+            background-image: url('mem.jpg');
             font-family: 'Comic Sans MS', cursive, sans-serif; /* Comic Sans font */
             color: #0000FF; /* Blue text */
-            text-align: center;
+            background-size: cover; /* или используйте contain, в зависимости от ваших предпочтений */
+            background-repeat: no-repeat;
+            background-position: center;
         }
         h1 {
             font-size: 48px;
