--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <img src="asos.png" alt="banner" class="responsive-img" />
     <title>AdvaScriptCC Old site alpha 2.0</title>
     <style>
         body {
@@ -22,16 +21,16 @@
             font-size: 24px;
         }
         table {
-            margin: 0 auto;
+            margin: 0;
             border: 2px solid #0000FF; /* Blue border */
             background-color: #FFFF00; /* Yellow background for table */
         }
         td {
             padding: 10px;
-            border: 1px solid #FF00FF; /* Magenta border for table cells */
+            border: 1px solid #ff0000; /* Magenta border for table cells */
         }
         a {
-            color: #FF00FF; /* Magenta links */
+            color: #0000ff; /* Magenta links */
             text-decoration: none; /* No underline */
         }
         a:hover {
@@ -39,14 +38,23 @@
         }
         .image-container {
             margin-top: 20px;
+            text-align: center; /* Center the image container */
         }
         .responsive-img {
             max-width: 100%;
             height: auto;
         }
+        .banner-img {
+            display: block;
+            margin: 0 auto; /* Center the banner image */
+        }
     </style>
 </head>
 <body>
+
+    <div class="image-container">
+        <img src="asos.png" alt="banner" class="responsive-img banner-img" />
+    </div>
 
     <h1>Welcome to My Awesome 2000s Website! Version Alpha 2.0</h1>
     
