--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             font-size: 24px;
         }
         table {
-            margin: 0;
+            margin: 0 auto;
             border: 2px solid #0000FF; /* Blue border */
             background-color: #FFFF00; /* Yellow background for table */
         }
