--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         body {
             background-color: #87CEEB;
             font-family: Arial, sans-serif;
-            color: #0000FF;
+            color: #0000ff;
             text-align: center;
         }
         h1 {
@@ -21,7 +21,7 @@
             font-size: 24px;
         }
         table {
-            margin: 0 auto;
+            margin: 0;
             border: 2px solid #0000FF; /* Blue border */
             background-color: #FFFF00; /* Yellow background for table */
         }
@@ -30,7 +30,7 @@
             border: 1px solid #ff0000; /* Magenta border for table cells */
         }
         a {
-            color: #0000ff; /* Magenta links */
+            color: #ff2f2f; /* Magenta links */
             text-decoration: none; /* No underline */
         }
         a:hover {
@@ -47,6 +47,24 @@
         .banner-img {
             display: block;
             margin: 0 auto; /* Center the banner image */
+        }
+        /* Dark mode styles */
+        body.dark-mode {
+            background-color: #333;
+            color: #fff;
+        }
+        body.dark-mode a {
+            color: rgb(255, 255, 255);
+        }
+        body.dark-mode table {
+            background-color: #444;
+            border-color: #fff;
+        }
+        body.dark-mode td {
+            border-color: #291700;
+        }
+        body.dark-mode marquee {
+            color: #0f0;
         }
     </style>
 </head>
@@ -89,9 +107,19 @@
         <img src="mie.gif" alt="Cool GIF" width="150" />
     </div>
 
+    <div class="dark-mode-toggle">
+        <button onclick="toggleDarkMode()">Toggle Dark Mode</button>
+    </div>
+
     <footer>
         <p>&copy; 2025 AdvaScriptCC®, all right recived</p>
     </footer>
+
+    <script>
+        function toggleDarkMode() {
+            document.body.classList.toggle('dark-mode');
+        }
+    </script>
 
 </body>
 </html>
