--- a/aboutproject.html
+++ b/aboutproject.html
@@ -45,6 +45,7 @@
     <h1>About My Project</h1>
 
     <h2>Project Title: Awesome Web Project</h2>
+    <h2>Это сраница будет удалена или изменена</h2>
     
     <p>This project is a demonstration of my web development skills, showcasing a variety of techniques and technologies.</p>
     
