--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <table>
         <tr>
             <td><a href="aboutme.html">About Me</a></td>
-            <td><a href="aboutproject">My Projects</a></td>
+            <td><a href="aboutproject.html">My Projects</a></td>
             <td><a href="contact.html">Contact Me</a></td>
             <td><a href="btt.html">How to back to 2000s</a></td>
         </tr>
