--- a/tutorial_fs.html
+++ b/tutorial_fs.html
@@ -55,14 +55,17 @@
         <h1>Туториал как быть СРТО</h1>
     </header>
     <div class="container">
+        <p class="text">Итак это туториал как быть слесарем эта страница будет заброшена так как создатель ленивая жопа так преступим. Для начала нужно взять реверсивную рукоятку ниже вы можыте увидеть видео как брать реверсивку в 1 или 2 парке.</p>
         <video src="Где-взять-реверсивку-тп1.mp4" controls></video>
-        <p class="text">Описание для первого видео.</p>
+        <p class="text">Если у вас не грузит то вам нужно зайти в офис 1 парка повернуть на лево и зайти в первую левую дверь там будет шкавчик вы нажимаете на E ангийскую и нажимаете кнопку которая поевилась.</p>
         <video src="Где-взять-реверсивку-тп2.mp4" controls></video>
-        <p class="text">Описание для второго видео.</p>
+        <p class="text">Если у вас не грузит то вам нужно зайти в офис 2 парка повернуть на право и зайти в первую правую дверт там точно также будет шкафчик вы нажимаете на Е английскую и нажимайне кнопку которая поевилась.</p>
         <video src="Как-выпустить-троллейбус.mp4" controls></video>
-        <p class="text">Описание для третьего видео.</p>
+        <p class="text">На этом видео показан пример как проверять троллейбус перед его выездам на линию после того как вы проверели троллейбус вы заходите на сайт fsproject.ru и заходите через свой стим аккаунт после этого откройте "Путевые листы TFS RP" и найдите нужного человека откройте путевой и ведите его борт номер(p.s если не видно проверте настройки ТС или нажмите на красную книгу в кабине и посмотрите на заголовок там в конце будет борт номер).</p>
         <video src="Как-сделать-ТО_3.mp4" controls></video>
-        <p class="text">Описание для четвертого видео.</p>
+        <p class="text">На видео показано пример как делать тех осмотр в принципе тут нечего говорить.</p>
+        <p class="text">Скоро будет пример как принимать троллейбус когда он заежает в депо.</p>
+        
     </div>
 </body>
 </html>
