--- a/tutorial_fs.html
+++ b/tutorial_fs.html
@@ -65,6 +65,9 @@
         <video src="Как-сделать-ТО_3.mp4" controls></video>
         <p class="text">На видео показано пример как делать тех осмотр в принципе тут нечего говорить.</p>
         <p class="text">Скоро будет пример как принимать троллейбус когда он заежает в депо.</p>
+
+    <div class="image-container">
+        <img src="mie.gif" alt="Cool GIF" width="150" />
         
     </div>
 </body>
