--- a/tutorial_fs.html
+++ b/tutorial_fs.html
@@ -18,6 +18,6 @@
     </style>
 </head>
 <body>
-    Это один большой текст на всю страницу.
+    КОЛДУН ПИДОРАС! ФС ИДИ НАХУЙ Я ВАС В РОТ ЕБАЛ RHP ПРАВ!
 </body>
 </html>
