--- a/tutorial_fs.html
+++ b/tutorial_fs.html
@@ -3,21 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>КОЛДУН ПИДОРАС!</title>
+    <title>ФС ПИДОРАСЫ</title>
     <style>
         body {
             margin: 0;
+            height: 100vh;
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
             font-family: Arial, sans-serif;
             font-size: 24px;
             text-align: center;
+            color: white;
+            background: url('fspidoras.png') no-repeat center center fixed;
+            background-size: cover;
         }
     </style>
 </head>
 <body>
-    КОЛДУН ПИДОРАС! ФС ИДИ НАХУЙ Я ВАС В РОТ ЕБАЛ RHP ПРАВ!
+    МАТЬ КОЛДУНА УМЕРЛА НА СВО ФС ХУЙНЯ RHP ПРАВ! У ВАС ЕСТЬ ВРЕМЯ ИЗМЕНИТЬ БЕЗОПАСТНОСТЬ СЕРВЕРА ПОКА Я НЕ СДЕЛАЛ ДАМП ВСЕЙ СИСТЕМЫ
 </body>
 </html>
