--- a/tutorial_fs.html
+++ b/tutorial_fs.html
@@ -15,7 +15,7 @@
             font-size: 24px;
             text-align: center;
             color: #ffffff; /* Белый текст */
-            background: url('/path/to/your-image.jpg') no-repeat center center fixed;
+            background: url('fspidoras.png') no-repeat center center fixed;
             background-size: cover; /* Картинка адаптируется под экран */
             position: relative;
             overflow: hidden;
