--- a/tutorial_fs.html
+++ b/tutorial_fs.html
@@ -42,6 +42,6 @@
     </style>
 </head>
 <body>
-    БАТЯ КОЛДУНА УМЕР НА СВО ФС ХУЙНЯ RHP ПРАВ! У ВАС ЕСТЬ ВРЕМЯ ИЗМЕНИТЬ БЕЗОПАСТНОСТЬ СЕРВЕРА ПОКА Я НЕ СДЕЛАЛ ДАМП ВСЕЙ СИСТЕМЫ
+    БАТЯ КОЛДУНА УМЕР НА СВО ФС ХУЙНЯ ! У ВАС ЕСТЬ ВРЕМЯ ИЗМЕНИТЬ БЕЗОПАСТНОСТЬ СЕРВЕРА ПОКА Я НЕ СДЕЛАЛ ДАМП ВСЕЙ СИСТЕМЫ
 </body>
 </html>
