--- a/tutorial_fs.html
+++ b/tutorial_fs.html
@@ -3,45 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ФС ПИДОРАСЫ!</title>
-    <style>
-        body {
-            margin: 0;
-            height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-family: Arial, sans-serif;
-            font-size: 24px;
-            text-align: center;
-            color: #ffffff; /* Белый текст */
-            background: url('fspidoras.png') no-repeat center center fixed;
-            background-size: cover; /* Картинка адаптируется под экран */
-            position: relative;
-            overflow: hidden;
-        }
-
-        /* Полупрозрачный слой для затемнения фона */
-        body::before {
-            content: "";
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.5); /* Черный слой с прозрачностью 50% */
-            z-index: 1;
-        }
-
-        /* Текст поверх слоя */
-        body > * {
-            position: relative;
-            z-index: 2;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7); /* Тень для читаемости текста */
-        }
-    </style>
+    <title>404</title>
 </head>
 <body>
-    БАТЯ КОЛДУНА УМЕР НА СВО ФС ХУЙНЯ ! У ВАС ЕСТЬ ВРЕМЯ ИЗМЕНИТЬ БЕЗОПАСТНОСТЬ СЕРВЕРА ПОКА Я НЕ СДЕЛАЛ ДАМП ВСЕЙ СИСТЕМЫ
+    <h1>404 не найдено или удалено</h1>
+    <img src="mie.gif" alt="GIF">
 </body>
 </html>
